# kanoniv-crewai

./: README.md  pyproject.toml
examples/: customer_support_demo.py  demo.py  full_test.py
src/kanoniv_crewai/: __init__.py  core.py
