[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanoniv-crewai"
version = "0.1.0"
description = "Cryptographic identity and delegation for CrewAI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["agent", "identity", "crewai", "delegation", "did", "ed25519"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "kanoniv-agent-auth>=0.2.0",
    "crewai>=0.80.0",
]

[project.urls]
Repository = "https://github.com/kanoniv/kanoniv-crewai"
Homepage = "https://kanoniv.com"

[tool.hatch.build.targets.wheel]
packages = ["src/kanoniv_crewai"]
